<resources>
    <string name="app_name">TheTelevisionDB</string>
    <string name="irseries">Ver lista de series</string>
    <string name="irprogramacion">Ver programacion de television</string>
    <string name="Nomserie">Nombre de la serie</string>
    <string name="Annoestreno">Año de Estreno</string>
    <string name="Cademisors">Cadena Emisora</string>
    <string name="Ntemporadas">Nº Temporadas</string>
    <string name="CogerFoto">Seleccionar Foto</string>
    <string name="AnnadirSerie">Añadir</string>
    <string name="ModSerie">Modificar</string>
    <string name="BorrarSerie">Borrar</string>
    <string name="NomSerie">Nombre:</string>
    <string name="CadenaEmisora">Emisora:</string>
    <string name="AnnoEstreno">Año Estreno:</string>
    <string name="NumeroTemporadas">Nº Temporadas:</string>
    <string name="UrlPortada">URL Portada(ej. https://series.es/portada.jpg)</string>
    <string name="RellenarCampos">Por Favor, Rellene todos los campos</string>
    <string name="OperacionExisto">Operacion realizada con exito</string>
    <string name="OperacionFallida">Huvo un problema al realizar la operacion</string>
    <string name="SeleccionarSerie">Por Favor, Seleccione una serie de la lista</string>
    <string name="RellenarNombre">Por Favor, introduzca un nombre</string>
    <string name="ProgramacionHoy">Programas en este Momento</string>
    <string name="HoraInicio">Hora de Inicio:</string>
    <string name="Horafin">Hora de Fin:</string>
    <string name="Titulo">Titulo:</string>
    <string name="Cadena">Cadena:</string>
    <string name="Descripcion">Descripcion:</string>
    <string name="Categoria">Categoria:</string>
</resources>